Build: show `builder` where the build was executed
This is a feature we had in the previous dashboard,
but we lost it in the migration.

It's pretty useful when debugging support request and I'd like to have it back.

Requires https://github.com/readthedocs/readthedocs.org/pull/12810

--- a/readthedocsext/theme/templates/builds/build_detail.html
+++ b/readthedocsext/theme/templates/builds/build_detail.html
@@ -96,6 +96,16 @@
                   </div>
                 </div>
 
+                {% if request.user.is_superuser %}
+                  <div class="item">
+                    <i class="grey fa-duotone fa-helmet-safety icon"></i>
+                    <div class="content">
+                      <span class="sub header">{% trans "Builder" %}</span>
+                      <span data-bind="text: builder"></span>
+                    </div>
+                  </div>
+                {% endif %}
+
               </div>
             </div>
           {% endblock build_detail_metadata_right %}
